--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html lang="en">
     <head>
         <meta charset="utf-8">
@@ -8,5 +7,6 @@
 
     <body>
         <h1>Odin Recipes</h1>
+        <a href="recipes/lasagna.html">Lasagna</a>
     </body>
 </html>
