--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,5 +7,32 @@
 
     <body>
         <h1>Lasagna</h1>
+        <img src="lasagna.jpg" width="300" height="200" alt="Picture of a lasagna">
+
+        <h2>Description</h2>
+        <p>Want to rock Italian food but don't know where to start? Here we have gathered the best recipe to make the perfect lasagna!</p>
+
+        <h2>Ingredients</h2>
+        <ul>
+            <li>Meat</li>
+            <li>Onion and garlic</li>
+            <li>Tomato products</li>
+            <li>Sugar</li>
+            <li>Spices and seasonings</li>
+            <li>Lasagna noodles</li>
+            <li>Cheeses</li>
+            <li>Eggs</li>
+        </ul>
+
+        <h2>Steps</h2>
+        <ol>
+            <li>Make the meat sauce.</li>
+            <li>Cook the noodles.</li>
+            <li>Make the riccota mixture.</li>
+            <li>Layer the lasagna according to the recipe instructions.</li>
+            <li>Cover with foil and bake.</li>
+            <li>Let the lasagna rest before serving.</li>
+        </ol>
+        
     </body>
 </html>
