--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="utf-8">
+        <meta charset="UTF-8">
         <title>Odin Recipes</title>
     </head>
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/lasagna.html">Lasagna</a>
+        <ul>
+            <ul><a href="recipes/lasagna.html">Lasagna</a></ul>
+            <ul><a href="recipes/pizza.html">Pizza</a></ul>
+            <ul><a href="recipes/risotto.html">Risotto</a></ul>
+        </ul>
     </body>
 </html>
