--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -8,8 +8,10 @@
     <body>
         <h1>Pizza</h1>
         <img src="pizza.jpg" width="300" height="200" alt="Picture of a pizza">
+
         <h2>Description</h2>
         <p>Let's learn how to make pizza dough? This pizza dough recipe is delicious, fluffy and will go perfect with all the toppings you can imagine!</p>
+
         <h2>Ingredients</h2>
         <ul>
             <li>Yeast</li>
@@ -18,6 +20,7 @@
             <li>Olive oil</li>
             <li>Salt</li>
         </ul>
+
         <h2>Steps</h2>
         <ol>
             <li>Mix the ingredients.</li>
@@ -26,5 +29,7 @@
             <li>Shape the dough.</li>
             <li>Bake in the preheated oven until golden brown, 15 to 20 minutes.</li>
         </ol>
+
+        <a href=../index.html>Return to main page</a>
     </body>
 </html>
