--- a/recipes/risotto.html
+++ b/recipes/risotto.html
@@ -35,5 +35,6 @@
             <li>Season with salt and pepper and serve immediately!</li>
         </ol>
         
+        <a href=../index.html>Return to main page</a>
     </body>
 </html>
